# large-flock

./: .gitignore  CMakeLists.txt  FlockMTL_demo.ipynb  Makefile  README.md  extension_config.cmake  litellm_proxy.config  product_reviews.csv  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: llm_map.md  report.md
scripts/: setup_env.sh  setup_vcpkg.sh
src/: CMakeLists.txt  large_flock_extension.cpp  llm_extension.cpp
src/core/: CMakeLists.txt  module.cpp
src/core/config/: config.cpp
src/core/functions/: CMakeLists.txt
src/core/functions/scalar/: CMakeLists.txt  get_num_tokens.py  lf_embedding.cpp  lf_filter.cpp  lf_generate.cpp  lf_map.cpp  llm_complete.cpp  llm_complete_json.cpp  llm_filter.cpp  llm_map.cpp
src/core/model_manager/: CMakeLists.txt  model_manager.cpp  openai_model.cpp  tiktoken.cpp
src/core/parser/: CMakeLists.txt  lf_query_parser.cpp  query_parser.cpp
src/core/parser/llm_response/: lf_map.cpp  llm_map.cpp
src/core/parser/query/: CMakeLists.txt  lf_create_duck_parser.cpp  lf_create_model_parser.cpp  lf_create_prompt_parser.cpp  lf_model_parser.cpp  lf_prompt_parser.cpp  model_parser.cpp  prompt_parser.cpp
src/core/parser/scalar/: CMakeLists.txt  lf_map.cpp  llm_complete.cpp  llm_complete_json.cpp  llm_map.cpp
src/core/utils/: CMakeLists.txt  template.cpp
src/include/: large_flock_extension.hpp  llm_extension.hpp
src/include/dependencies/: inja.hpp  openai.hpp
src/include/flockmtl/core/parser/: scalar.hpp
src/include/large_flock/: common.hpp
src/include/large_flock/core/: module.hpp
src/include/large_flock/core/config/: lf_config.hpp
src/include/large_flock/core/functions/: scalar.hpp
src/include/large_flock/core/model_manager/: model_manager.hpp  openai.hpp
src/include/large_flock/core/parser/: lf_query_parser.hpp  llm_response.hpp  query_statements.hpp  scalar.hpp
src/include/large_flock/core/parser/query/: lf_create_duck_parser.hpp  lf_create_model_parser.hpp  lf_create_prompt_parser.hpp  lf_prompt_parser.hpp
src/include/large_flock/core/utils/: template.hpp
src/include/utils/: litellm.h  openai_utils.h  response_utils.h  template_utils.h  validation_utils.h
src/templates/: lf_map_prompt_template.txt  template_llm_map.txt
src/templates/lf_map/: prompt_template.txt
src/utils/: litellm.cpp  openai_utils.cpp  response_utils.cpp  template_utils.cpp  utils.cpp  utils.h  validation_utils.cpp
test/: README.md
test/sql/: lf_map.test  llm.test
